Add theme label + update Readme file

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
         <!-- It is important to wrap the above span and input in a label so as to make the entire wrapped area clickable.
         Clicking anywhere on the label will toggle the checkbox -->
+
+        <h3 id="theme-label"></h3>
     </header>
 
     <main>
